--- a/_posts/2021-02-14-情人节快乐！.md
+++ b/_posts/2021-02-14-情人节快乐！.md
@@ -1,6 +1,7 @@
 ---
-title: 2021年2月14日18点10分 祝各位情人节快乐，年年有今日，岁岁有今朝
+title: 祝各位情人节快乐，年年有今日，岁岁有今朝
 ---
 
 ### 过年就摸鱼了一个星期，每天都过得特别惬意
+2021年2月14日18点10分 
 早上十点多起床，玩会儿手机就吃饭了。下午打原神，晚上开语音和同学王者排位，全然忘了还没有研究生offer的事实。。。
